LWCLearnwithFLOWOrg/force-app/main/default/objects/Prospect_Note__c/Prospect_Note__c.object-meta.xml
<CustomObject>
    <description>Prospect notes from Outreach</description>
    <label>Outreach Prospect Note</label>
    <nameField>
        <displayFormat>PN-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outreach Prospect Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>