LWCLearnwithFLOWOrg/force-app/main/default/objects/Prospect_Note__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <inlineHelpText>Created date as opposed to created date/time.</inlineHelpText>
    <label>Created Date</label>
    <type>Date</type>
</CustomField>