LWCLearnwithFLOWOrg/force-app/main/default/objects/Prospect_Note__c/fields/Note_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Note_Created_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Person who created the note.</inlineHelpText>
    <label>Note Created By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Prospect_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>