LWCLearnwithFLOWOrg/force-app/main/default/objects/Prospect_Note__c/fields/Outreach_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Account_Id__c</fullName>
    <externalId>true</externalId>
    <label>Outreach Account Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>