LWCLearnwithFLOWOrg/force-app/main/default/objects/Prospect_Note__c/fields/Outreach_Link__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Link__c</fullName>
    <formula>IF( ISBLANK(Outreach_Account_Id__c) , &quot;&quot;, HYPERLINK(&quot;https://app1c.outreach.io/prospects/&quot; + Outreach_Account_Id__c + &quot;/overview&quot;,  Account__r.Name + &quot; in Outreach&quot;, &quot;_blank&quot;))</formula>
    <inlineHelpText>Link to the prospect in Outreach.</inlineHelpText>
    <label>Outreach Link</label>
    <type>Text</type>
</CustomField>