LWCLearnwithFLOWOrg/force-app/main/default/objects/Prospect_Note__c/fields/Prospect__c.field-meta.xml
<CustomField>
    <fullName>Prospect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Prospect (contact) the note was created for.</inlineHelpText>
    <label>Prospect</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Prospect_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>