LWCLearnwithFLOWOrg/force-app/main/default/objects/Prospect_Note__c/fields/Task_Id__c.field-meta.xml
<CustomField>
    <fullName>Task_Id__c</fullName>
    <description>Task from which the note came.</description>
    <label>Task Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>